src/orgs/usa/data-model/objects/ArtemisChangeEvent__e/ArtemisChangeEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event object used to receive published events by the Artemis EMR servers, whenever modifications happen in the system and changes must be communicated back to Salesforce.</description>
    <label>Artemis Change Event</label>
    <pluralLabel>Artemis Change Events</pluralLabel>
</CustomObject>