src/orgs/usa/data-model/objects/ArtemisChangeEvent__e/fields/ArtemisServer__c.field-meta.xml
<CustomField>
    <fullName>ArtemisServer__c</fullName>
    <description>Defines the source Artemis server instance this event was generated from. Expected values are: BOSNY, BOSNE and BOSNC</description>
    <label>Artemis Server</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>