src/orgs/usa/data-model/objects/ArtemisChangeEvent__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>The type of event that affected the resource. Expects values like: create, update and delete.</description>
    <label>Event</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>