src/orgs/usa/data-model/objects/ArtemisChangeEvent__e/fields/ResourceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ResourceIdentifier__c</fullName>
    <description>External identifier of the affected resource.</description>
    <label>Resource Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>