src/orgs/usa/data-model/objects/ArtemisChangeEvent__e/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <description>Name of the affected resource. Expects names like: Patient, Provider, Location, Appointment, ...</description>
    <label>Resource type name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>